--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,9 @@
 
 	<head>
 		<title>PubHub</title>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"/>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"/>
  		
  		<script src="https://use.fontawesome.com/564df5e8ea.js"></script>
@@ -31,31 +34,37 @@
 <div class="container-fluid">
   
 <div class="row">
-
-  <nav class="blue">
-
+<div class="navbar-fixed">
+  <nav class="grey darken-4">
+	
     <div class="nav-wrapper">
     <div class="row">
-   		<div class="col s2 l2 max">
+   		<div class="col s2 l3 max">
     		<img src="logo.png" id="brandImg"/>
     	</div>
 
-	<div class="col s2 l2"><span class="fa fa-search right in"></span></div>
-    <div class="col s4 l5">
+	<div class="col s2 l1"></div>
+    <div class="col s4 l3">
 	
-      <form class="blue">
+      <form class="grey darken-4"  th:action="@{/search}" method="GET">
       	<div class="header-search-wrapper">
 
-      	
-          <input id="search" type="search" placeholder="   Search Pubs" class="header-search-input z-depth-2 s" autofocus="autofocus" onfocus="this.select()"></input>
+      	<div class="row"></div>
+      	<div class="col s11">
+          <input id="search" type="text" placeholder=" Search Pubs" style="margin-top: 10px" class="header-search-input z-depth-2 s" autofocus="autofocus" onfocus="this.select()" name="q"/>
           
+          
+           </div>
+           <div class="col s1">
+          <button type="submit" style="margin-top: 12px" class="btn grey darken-1 btn-block"><span class="fa fa-search"></span> </button>
+         </div>
   		</div>
 
 
       </form>
 
   	</div>
-<div class="col s4 l3">
+<div class="col s4 l5">
   	<ul id="nav-mobile" class="right">
         <li><a href="/cart"> <span class="fa fa-shopping-cart fa-2x"></span>  </a></li>
         <li><a href="/account"> <span class="fa fa-user fa-2x"></span>     </a></li>
@@ -66,6 +75,8 @@
     </div>
   </nav>
   </div>
+  </div>
+
 <h4 class="center-align ">Pubs in Fermoy, Cork</h4>
 
 	<div class="row">
@@ -92,7 +103,7 @@
   <input th:type="hidden" th:name="hiddenid" th:value="${pub.id}"/>
   
   <div style="padding-bottom: 20px;">    
-    <button type="submit" class="sumb btn btn-block btn-large blue" th:name="add + ${pub.id}" value=" " style="width: 100%; max-height: 45px;">Menu <i class="fa fa-beer"></i></button>
+    <button type="submit" class="sumb btn btn-block btn-large orange darken-1" th:name="add + ${pub.id}" value=" " style="width: 100%; max-height: 45px;">Menu <i class="fa fa-beer"></i></button>
    </div>
    </form>
   </div>
@@ -120,7 +131,7 @@
   <input th:type="hidden" th:name="hiddenid" th:value="${pub.id}"/>
   
   <div style="padding-bottom: 20px;">    
-    <button type="submit" class="sumb btn btn-block btn-large blue" th:name="add + ${pub.id}" value=" " style="width: 100%; max-height: 45px;">Menu <i class="fa fa-beer"></i></button>
+    <button type="submit" class="sumb btn btn-block btn-large orange darken-1" th:name="add + ${pub.id}" value=" " style="width: 100%; max-height: 45px;">Menu <i class="fa fa-beer"></i></button>
    </div>
    </form>
   </div>
@@ -148,7 +159,7 @@
   <input th:type="hidden" th:name="hiddenid" th:value="${pub.id}"/>
   
   <div style="padding-bottom: 20px;">    
-    <button type="submit" class="sumb btn btn-block btn-large blue" th:name="add + ${pub.id}" value=" " style="width: 100%; max-height: 45px;">Menu <i class="fa fa-beer"></i></button>
+    <button type="submit" class="sumb btn btn-block btn-large orange darken-1" th:name="add + ${pub.id}" value=" " style="width: 100%; max-height: 45px;">Menu <i class="fa fa-beer"></i></button>
    </div>
    </form>
   </div>
@@ -178,7 +189,7 @@
   <input th:type="hidden" th:name="hiddenid" th:value="${pub.id}"/>
   
   <div style="padding-bottom: 20px;">    
-    <button type="submit" class="sumb btn btn-block btn-large blue" th:name="add + ${pub.id}" value=" " style="width: 100%; max-height: 45px;">Menu <i class="fa fa-beer"></i></button>
+    <button type="submit" class="sumb btn btn-block btn-large orange darken-1" th:name="add + ${pub.id}" value=" " style="width: 100%; max-height: 45px;">Menu <i class="fa fa-beer"></i></button>
    </div>
    </form>
   </div>
@@ -196,7 +207,11 @@
 
 </div>
 
+<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+<script src="https://cdn.rawgit.com/HubSpot/tether/v1.3.4/dist/js/tether.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
 
 
 
