--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -75,7 +75,7 @@
     		<a href="/home"><img src="logo.png" id="brandImg" href="/index.html"/></a>
     	</div>
 
-	<div class="col s2 l2"><span class="fa fa-search right in"></span></div>
+	<div class="col s2 l2"></div>
     <div class="col s4 l5">
 	
       <form class="grey darken-4"  th:action="@{/search}" method="GET">
