--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
     <div class="nav-wrapper">
     <div class="row">
    		<div class="col s2 l3 max">
-    		<img src="logo.png" id="brandImg"/>
+    		<a href="/home"><img src="logo.png" id="brandImg"/></a>
     	</div>
 
 	<div class="col s2 l1"></div>
